--- a/_config.yml
+++ b/_config.yml
@@ -9,21 +9,21 @@ presskit_download_link                    :                                     
 app_icon                                  : # assets/appicon.png                      # Automatically populates if not set and if iOS app ID is set.  Otherwise enter path to icon file manually.
 app_name                                  :                                           # Automatically populates if not set and if iOS app ID is set.  Otherwise enter manually.
 app_price                                 :                                           # Automatically populates if not set and if iOS app ID is set.  Otherwise enter manually.
-app_description                           : Write a short tagline for your app.
+app_description                           : The smart student planner you have been waiting for
 
 enable_smart_app_banner                   : true                                      # Set to true to show a smart app banner at top of page on mobile devices.
 
 
 
 # Information About Yourself
-your_name                                 : Emil Baehr                                
-your_link                                 : https://emilbaehr.com                     
-your_city                                 : Copenhagen                                
-email_address                             : emil.baehr@gmail.com
-facebook_username                         :                                           
-instagram_username                        : ebaehr
-twitter_username                          : ebaehr
-github_username                           : emilbaehr
+your_name                                 : SASystems                                
+your_link                                 : http://sasystems.ch                     
+your_city                                 : Zurich                                
+email_address                             : 
+facebook_username                         : studyrapp                                          
+instagram_username                        : 
+twitter_username                          : studytheapp
+github_username                           : 
 youtube_username                          :
 
 
@@ -31,8 +31,11 @@ youtube_username                          :
 # Feature List                            Edit, add or remove features to be presented.
 features                                  :
 
-  - title                                 : GitHub Pages Jekyll Theme
-    description                           : Designed for GitHub Pages. Fork. Edit _config.yml. Upload screenshot/video. Push to gh-pages branch. Voilá!
+  - title                                 : Planner
+    description                           : - Enrollment management with terms and courses\n- Add classes with custom class types
+- Support for repetitive and MWF classes
+- Skip single classes (attendance tracking) and see overview for each course
+- Delete single classes when they got canceled
     fontawesome_icon_name                 : magic
     
   - title                                 : iPhone Device Preview
