--- a/_config.yml
+++ b/_config.yml
@@ -32,7 +32,7 @@ youtube_username                          :
 features                                  :
 
   - title                                 : Planner
-    description                           : - Enrollment management with terms and courses\n- Add classes with custom class types
+    description                           : - Enrollment management with terms and courses - Add classes with custom class types
     fontawesome_icon_name                 : magic
     
   - title                                 : iPhone Device Preview
