--- a/_config.yml
+++ b/_config.yml
@@ -32,61 +32,36 @@ youtube_username                          :
 features                                  :
 
   - title                                 : Planner
-    description                           : Enrollment management with terms and courses. Add classes with custom class types
-    fontawesome_icon_name                 : magic
+    description                           : Enrollment management with terms and courses. Add classes with custom class types. Support for repetitive and MWF classes. Skip single classes (attendance tracking) and see overview for each course. Delete single classes when they got canceled
+    fontawesome_icon_name                 : university
     
-  - title                                 : iPhone Device Preview
-    description                           : Preview your app in the context of an iPhone device. Five different device colors included.
-    fontawesome_icon_name                 : mobile
+  - title                                 : Calendar
+    description                           : Month or week overview. Shows all activities. Add extra-curricular events. Integrates the system calendar. Calendar sharing so you can integrate Studyr with your Google Calendar, Apple Calendar, or any other 3rd party app which supports iCal
+    fontawesome_icon_name                 : calendar-alt
 
-  - title                                 : Video Support
-    description                           : Preview app video on the iPhone device simply by placing your video files in the videos folder.
-    fontawesome_icon_name                 : play-circle
+  - title                                 : Homework
+    description                           : Add all your homework. Set priority levels, and reminders. Create repeating homework. Filter to show completed ones. Sort by date, course, and priority
+    fontawesome_icon_name                 : clipboard-list-check
 
-  - title                                 : Automatic Icon and Metadata
-    description                           : Enter iOS app ID in the _config.yml file to automatically fetch app icon, price and App Store Link.
-    fontawesome_icon_name                 : sync
-
-  - title                                 : Easy to Tweak
-    description                           : Tweak accent color, images, icons and transparency via the _config.yml file. No HTML/CSS needed.
-    fontawesome_icon_name                 : adjust
-  
-  - title                                 : Feature List
-    description                           : Add features (like this one) to your site via the _config.yml file. No HTML/CSS needed.
-    fontawesome_icon_name                 : star
-
-  - title                                 : Smart App Banner
-    description                           : Display a smart app banner on iOS devices.
-    fontawesome_icon_name                 : arrow-alt-circle-down
-
-  - title                                 : Social Links
-    description                           : Easily add social media accounts and contact info in the footer via the _config.yml file. No HTML/CSS needed.
-    fontawesome_icon_name                 : link
-
-  - title                                 : FontAwesome Support
-    description                           : Pick custom Font Awesome icons for the feature list via the _config.yml file. No HTML/CSS needed.
-    fontawesome_icon_name                 : info-circle
-
-  - title                                 : # New Feature Title
-    description                           : # New Feature Description
-    fontawesome_icon_name                 : # Enter Font Awesome icon name (e.g. star). Find icons on fontawesome.com/icons.
-
+  - title                                 : Grading
+    description                           : Add all your grading/assignments. Set different grading types, and reminders. Create repeating gradings. Sort by date or course.
+    fontawesome_icon_name                 : award
 
 
 # Theme Settings
-topbar_color                              : "#000000"
+topbar_color                              : "#26a9e0"
 topbar_transparency                       : 0.1
 topbar_title_color                        : "#ffffff"
 
 cover_image                               : assets/headerimage.png                    # Replace with alternative image path or image URL.
 cover_overlay_color                       : "#363b3d"
-cover_overlay_transparency                : 0.8
+cover_overlay_transparency                : 0.3
 
-device_color                              : black                                     # Set to: blue, black, yellow, coral or white.
+device_color                              : white                                     # Set to: blue, black, yellow, coral or white.
 
 body_background_color                     : "ffffff"
 
-link_color                                : "#1d63ea"
+link_color                                : "#26a9e0"
 
 app_title_color                           : "#ffffff"
 app_price_color                           : "#ffffff"
@@ -95,7 +70,7 @@ app_description_color                     : "#ffffff"
 feature_title_color                       : "#000000"
 feature_text_color                        : "#666666"
 
-feature_icons_foreground_color            : "#1d63ea"
+feature_icons_foreground_color            : "#26a9e0"
 feature_icons_background_color            : "#e6e6e6"
 
 social_icons_foreground_color             : "#666666"
