--- a/_config.yml
+++ b/_config.yml
@@ -41,7 +41,7 @@ features                                  :
 
   - title                                 : Homework
     description                           : Add all your homework. Set priority levels, and reminders. Create repeating homework. Filter to show completed ones. Sort by date, course, and priority
-    fontawesome_icon_name                 : clipboard-list-check
+    fontawesome_icon_name                 : clipboard-list
 
   - title                                 : Grading
     description                           : Add all your grading/assignments. Set different grading types, and reminders. Create repeating gradings. Sort by date or course.
