--- a/_config.yml
+++ b/_config.yml
@@ -57,7 +57,7 @@ features                                  :
 
 
 # Theme Settings
-topbar_color                              : "#007AFF"
+topbar_color                              : "#298FFF"
 topbar_transparency                       : 0.3
 topbar_title_color                        : "#ffffff"
 
@@ -69,7 +69,7 @@ device_color                              : white                               
 
 body_background_color                     : "ffffff"
 
-link_color                                : "#007AFF"
+link_color                                : "#298FFF"
 
 app_title_color                           : "#ffffff"
 app_price_color                           : "#ffffff"
@@ -78,7 +78,7 @@ app_description_color                     : "#ffffff"
 feature_title_color                       : "#000000"
 feature_text_color                        : "#666666"
 
-feature_icons_foreground_color            : "#007AFF"
+feature_icons_foreground_color            : "#298FFF"
 feature_icons_background_color            : "#e6e6e6"
 
 social_icons_foreground_color             : "#666666"
