--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ enable_smart_app_banner                   : true                                
 # Information About Yourself
 your_name                                 : SASystems                                
 your_link                                 : http://sasystems.ch                     
-your_city                                 : Zurich                                
+your_city                                 : Zurich, Switzerland                                
 email_address                             : 
 facebook_username                         : studyrapp                                          
 instagram_username                        : 
