--- a/_config.yml
+++ b/_config.yml
@@ -44,11 +44,11 @@ features                                  :
     fontawesome_icon_name                 : chalkboard-teacher
 
   - title                                 : Homework
-    description                           : Add all your homework. Set priority levels, and reminders. Create repeating homework. Filter to show completed ones. Sort by date, course, and priority
+    description                           : Add all your homework. Set priority levels, and reminders. Create repeating homework. Filter to show completed ones. Sort by date, course, or priority
     fontawesome_icon_name                 : clipboard-list
 
   - title                                 : Grading
-    description                           : Add all your grading/assignments. Set different grading types, and reminders. Create repeating gradings. Sort by date or course.
+    description                           : Add all your grading and assignments. Set grades, weigths, and reminders. Customize your grading scales. Create repeating gradings. Sort by date or course.
     fontawesome_icon_name                 : award
     
   - title                                 : Integration
